# zero-2-prod

./: Cargo.toml
migrations/: 20240307124035_create_subscriptions_table.sql
scripts/: init_db.sh
src/: lib.rs  main.rs
tests/: health_check.rs
